Fixed me being bad